fixed contrast issues

--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -30,6 +30,7 @@ body {
 
 h1 {
   color: white;
+  -webkit-text-stroke: 1px black;
   font-size: 25.46vw;
   margin: 0px;
   padding: 0px;
@@ -59,7 +60,7 @@ h1 {
 
 .start-app {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #2c2628;
   border: 2px solid rgba(255, 255, 255, 0.4);
   border-radius: 10px;
   color: white;
